Correction de contraste

--- a/style.css
+++ b/style.css
@@ -782,6 +782,10 @@ h4 {
     color: #FADDD6!important;
 }
 
+.tc-contraste{
+    color: black !important;
+}
+
 
 /* Modification de la couleur de texte pour améliorer le contraste */
 .btn-atomic-tangerine {
